force-app/main/default/objects/LLC_BI__Requirement_Context__c/LLC_BI__Requirement_Context__c.object-meta.xml
<CustomObject>
    <description>This junction object links a Requirement object to another context object.</description>
    <label>Requirement Context</label>
    <nameField>
        <displayFormat>RC-{0000000000}</displayFormat>
        <label>Requirement Context Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirement Contexts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>