force-app/main/default/objects/LLC_BI__Requirement_Context__c/fields/LLC_BI__Business_Process_Key__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Business_Process_Key__c</fullName>
    <description>The system automatically populates this text field with a unique key that identifies the business process used for a specific domain or feature.</description>
    <inlineHelpText>This field uses a unique key that identifies a business process for a specific domain or feature.</inlineHelpText>
    <label>Business Process Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>