force-app/main/default/objects/LLC_BI__Requirement_Context__c/fields/LLC_BI__Covenant_Compliance2__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Covenant_Compliance2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this lookup field to reference a Covenant Compliance context object.</description>
    <inlineHelpText>This field references the Covenant Compliance record related to the Requirement Context object.</inlineHelpText>
    <label>Covenant Compliance</label>
    <referenceTo>LLC_BI__Covenant_Compliance2__c</referenceTo>
    <relationshipLabel>Requirement Contexts</relationshipLabel>
    <relationshipName>Requirement_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>