force-app/main/default/objects/LLC_BI__Requirement_Context__c/fields/LLC_BI__Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this checkbox to indicate whether the junction object is deleted or not. By default, it is false.</description>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>