force-app/main/default/objects/LLC_BI__Requirement_Context__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional lookup field to reference a Loan context object.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Requirement Contexts</relationshipLabel>
    <relationshipName>Requirement_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>