force-app/main/default/objects/LLC_BI__Requirement_Context__c/fields/LLC_BI__Product_Package__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional lookup field to reference a Product Package context object.</description>
    <label>Product Package</label>
    <referenceTo>LLC_BI__Product_Package__c</referenceTo>
    <relationshipLabel>Requirement Contexts</relationshipLabel>
    <relationshipName>Requirement_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>