force-app/main/default/objects/LLC_BI__Requirement_Context__c/fields/LLC_BI__Relationship__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional lookup field to reference a Relationship (Account) context object.</description>
    <label>Relationship</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requirement Contexts</relationshipLabel>
    <relationshipName>Requirement_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>