force-app/main/default/objects/LLC_BI__Requirement_Context__c/fields/LLC_BI__Requirement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Requirement__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The system automatically populates this optional lookup field to reference a Requirement object.</description>
    <label>Requirement</label>
    <referenceTo>LLC_BI__Requirement__c</referenceTo>
    <relationshipLabel>Requirement Contexts</relationshipLabel>
    <relationshipName>Requirement_Contexts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>